# text-diffusion-inference

./: .gitignore  Justfile  README.md
client/: client.py
launcher/: Cargo.toml  config.toml
launcher/src/: main.rs
proto/: generate.proto
proto/textdiffusion/v1/: textdiffusion.proto
router/: Cargo.toml  build.rs
router/src/: main.rs  models.rs  tokenizer.rs
text_worker/: modelling_llada.py  server.py
worker/: generate.py  generate_llada.py  generate_llada.sh  model.py  modelling_llada.py  pyproject.toml  server.py  tokenizer.py
worker/textdiffusion/v1/: textdiffusion_pb2.py  textdiffusion_pb2_grpc.py
