[package]
name = "router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
clap = { version = "4.5", features = ["derive"] }
tower = "0.5"
hyper-util = { version = "0.1", features = ["tokio"] }
regex = "1.12.2"
thiserror = "2.0.17"

[build-dependencies]
tonic-prost-build = "0.14.2"
